# nanobot-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  core_agent_lines.sh  docker-compose.yml
bridge/: package.json
bridge/src/: index.ts  server.ts
crates/app/: Cargo.toml
crates/app/src/: app.rs  background.rs  channels.rs  dispatch.rs  error.rs  lib.rs  tests.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs  tests.rs
crates/channel-feishu/: Cargo.toml
crates/channel-feishu/src/: lib.rs
crates/channel-qq/: Cargo.toml
crates/channel-telegram/: Cargo.toml
crates/channel-telegram/src/: api.rs  error.rs  lib.rs  mapping.rs  settings.rs  tests.rs  types.rs
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: agent_loop.rs  error.rs  lib.rs  runtime.rs  skills.rs  subagents.rs  tests.rs
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs  tests.rs
crates/heartbeat/src/: lib.rs  tests.rs
crates/nanobot-app/: Cargo.toml
crates/nanobot-app/src/: lib.rs
crates/nanobot-bus/src/: lib.rs
crates/nanobot-channel-feishu/: Cargo.toml
crates/nanobot-channel-qq/: Cargo.toml
crates/nanobot-channel-qq/src/: lib.rs
crates/nanobot-channels/: Cargo.toml
crates/nanobot-channels/src/: lib.rs
crates/nanobot-cli/: Cargo.toml
crates/nanobot-config/src/: lib.rs
crates/nanobot-core/: Cargo.toml
crates/nanobot-core/src/: lib.rs
crates/nanobot-cron/src/: lib.rs
crates/nanobot-heartbeat/: Cargo.toml
crates/nanobot-heartbeat/src/: lib.rs
crates/nanobot-provider/: Cargo.toml
crates/nanobot-provider/src/: lib.rs
crates/nanobot-session/: Cargo.toml
crates/nanobot-session/src/: lib.rs
crates/nanobot-tools/: Cargo.toml
crates/nanobot-tools/src/: lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  factory.rs  http.rs  lib.rs  tests.rs  types.rs
crates/provider/src/providers/: demo_tool_calling.rs  mod.rs  openai_compatible.rs  static_provider.rs
crates/session/src/: error.rs  lib.rs  manager.rs  model.rs  tests.rs  util.rs
crates/tools/: Cargo.toml
crates/tools/src/: definition.rs  error.rs  handlers.rs  lib.rs  registry.rs  tests.rs
docs/superpowers/specs/: 2026-03-26-proactive-semantic-outreach-design.md
