[workspace]
members = [
    "crates/app",
    "crates/bus",
    "crates/channel-feishu",
    "crates/channel-qq",
    "crates/channels",
    "crates/cli",
    "crates/config",
    "crates/core", "crates/cron", "crates/heartbeat",
    "crates/provider",
    "crates/session",
    "crates/tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["nanobot contributors"]

[workspace.dependencies]
clap = { version = "3.2.4", features = ["derive"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.26.2"
