[package]
name = "nanobot-channel-feishu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
futures-util.workspace = true
nanobot-bus = { path = "../bus" }
nanobot-channels = { path = "../channels" }
nanobot-config = { path = "../config" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
