[package]
name = "nanobot-channel-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nanobot-bus = { path = "../bus" }
nanobot-channels = { path = "../channels" }
nanobot-config = { path = "../config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }
