[package]
name = "nanobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
env_logger = "0.11.8"
futures-util.workspace = true
nanobot-app = { path = "../app" }
nanobot-config = { path = "../config" }
nanobot-provider = { path = "../provider" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
