[package]
name = "nanobot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
nanobot-bus = { path = "../bus" }
nanobot-provider = { path = "../provider" }
nanobot-session = { path = "../session" }
nanobot-tools = { path = "../tools" }
serde_json.workspace = true
thiserror.workspace = true
