[package]
name = "nanobot-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
nanobot-bus = { path = "../nanobot-bus" }
nanobot-channel-feishu = { path = "../nanobot-channel-feishu" }
nanobot-channel-qq = { path = "../nanobot-channel-qq" }
nanobot-channels = { path = "../nanobot-channels" }
nanobot-config = { path = "../nanobot-config" }
nanobot-core = { path = "../nanobot-core" }
nanobot-cron = { path = "../nanobot-cron" }
nanobot-heartbeat = { path = "../nanobot-heartbeat" }
nanobot-provider = { path = "../nanobot-provider" }
nanobot-session = { path = "../nanobot-session" }
nanobot-tools = { path = "../nanobot-tools" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
