[package]
name = "nanobot-channel-qq"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
futures-util.workspace = true
nanobot-bus = { path = "../nanobot-bus" }
nanobot-channels = { path = "../nanobot-channels" }
nanobot-config = { path = "../nanobot-config" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
