[package]
name = "nanobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
futures-util.workspace = true
nanobot-app = { path = "../nanobot-app" }
nanobot-config = { path = "../nanobot-config" }
nanobot-provider = { path = "../nanobot-provider" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
