[package]
name = "nanobot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nanobot-bus = { path = "../nanobot-bus" }
nanobot-provider = { path = "../nanobot-provider" }
nanobot-session = { path = "../nanobot-session" }
nanobot-tools = { path = "../nanobot-tools" }
serde_json.workspace = true
thiserror.workspace = true
