[package]
name = "nanobot-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
nanobot-config = { path = "../nanobot-config" }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
