[package]
name = "nanobot-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
log.workspace = true
nanobot-config = { path = "../config" }
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
